@@ -18,10 +18,11 @@ contributing authors, including:
 
   Tom Tromey <tromey@redhat.com>
   Nathaniel Smith <njs@pobox.com>
-  Matt Kraai  <kraai@ftbfs.org>
+  Matt Kraai <kraai@ftbfs.org>
   Lorenzo Campedelli <lorenzo.campedelli@libero.it>
   Eric Kidd  <eric.kidd@pobox.com>
   Christof Petig <christof@petig-baender.de>
+  Paul Snively <psnively@mac.com>
 
 supporting files:
 -----------------
